--- a/Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning/Course_1_Part_4_Lesson_4.ipynb
+++ b/Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning/Course_1_Part_4_Lesson_4.ipynb
@@ -86,7 +86,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "N9-BCmi15L93",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "19a6cdfd-307e-4a08-8aca-ba6b9f5c1e17"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -116,7 +120,30 @@
         "model.fit(x_train, y_train, epochs=10, callbacks=[callbacks])"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "1866/1875 [============================>.] - ETA: 0s - loss: 0.4763 - accuracy: 0.8297\n",
+            "Reached 60% accuracy so cancelling training!\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.4755 - accuracy: 0.8301\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f9dfb23ee80>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
